pxc/tests/test_194_ephemeral/eph2.px

public namespace eph2;
import core::common -;

pure function cslice{int} test_ephemeral_escape()
{
  varray{int} arr;
  cslice{int} xuns = arr[0 .. 10];
  return xuns; // error: short-lived
}

threaded function void test_eph2()
{
  const z = test_ephemeral_escape();
  thread_io().stdout().println(z.size());
}

{
  test_eph2();
}
